oop + streams + train